# tree-sitter-nasin

./: .editorconfig  .eslintrc.cjs  .gitignore  .prettierrc  .rustfmt.toml  Cargo.toml  Makefile  README.md  binding.gyp  build.rs  bun.lockb  grammar.js  package.json  rere.py  treesitter.json
bindings/go/: binding_test.go
bindings/rust/: lib.rs
bun_scripts/: test.ts
cranelift-shim/: Cargo.toml
cranelift-shim/src/: lib.rs
examples/: hello_world.torv  simple_operators.torv
parser/: package.json  tsconfig.json
parser/src/: index.ts  parser.ts
proto/: ast.proto  lex.proto  m_ir.proto  mir.proto
queries/: highlights.scm
src/: config.rs  context.rs  errors.rs  grammar.json  index.ts  ir.ts  lex.rs  lexer.rs  lib.rs  main.rs  mir.rs  node-types.json  parser.c  parser.ts  proto.rs  sources.rs  tree_sitter_test.rs  tree_sitter_utils.rs
src-old/: tree_sitter_utils.rs
src-old/codegen/: traits.rs
src-old/mir/: instr.rs  module.rs  ty.rs  value.rs
src-old/module_builder/: builtin_types.rs  instr_builder.rs  registry.rs
src-old/utils/: idented.rs  mod.rs  replace_with.rs  string_lit.rs
src/bytecode/: instr.rs  mod.rs  module.rs  ty.rs  value.rs
src/codegen/: mod.rs  native_codegen.rs  traits.rs
src/lexer/: mod.rs  registry.rs  types.rs
src/mir/: instr.rs  mod.rs  module.rs  ty.rs  value.rs
src/module_builder/: instr_builder.rs  mod.rs  registry.rs  type_registry.rs  (+1 more)
tests/: _test.list  _test.list.bi  func_declaration.nsn  func_declaration.test  func_declaration.torv  global_string.nsn  global_string.test  global_string.torv  global_string_from_func.nsn  global_string_from_func.test  global_string_from_func.torv  hello.nsn  hello.test  hello.torv  if.nsn  if.test  if.torv  if_returning.nsn  if_returning.test  if_returning.torv  method.nsn  operators.nsn  record_type.nsn  record_type.test  record_type.torv  recursion.nsn  recursion.test  recursion.torv  return_record.nsn
tree-sitter-nasin/: .editorconfig  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  bun.lockb  global.d.ts  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tsconfig.json
tree-sitter-torvo/: .gitignore  Cargo.toml  binding.gyp  bun.lockb  grammar.js  grammar.ts  package.json  tsconfig.json
(+44 files in other folders)
