[package]
name = "torvo"
description = "Elegant pure functional programming language"
authors = ["Felipe Nascimento <felipenasgomes@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
cranelift-codegen = "0.104.1"
cranelift-frontend = "0.104.1"
cranelift-module = "0.104.1"
cranelift-object = "0.104.1"
prost = "0.12.3"
prost-types = "0.12.3"
target-lexicon = "0.12.13"

[build-dependencies]
prost-build = "0.12.3"
