[package]
name = "torvo"
description = "Elegant pure functional programming language"
authors = ["Felipe Nascimento <felipenasgomes@gmail.com>"]
version = "0.1.0"
edition = "2021"

[workspace]
members = ["tree-sitter-torvo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
compact-debug = "0.1.0"
cranelift-codegen = "0.104.1"
cranelift-frontend = "0.104.1"
cranelift-module = "0.104.1"
cranelift-object = "0.104.1"
itertools = "0.12.1"
target-lexicon = "0.12.13"
thiserror = "1.0.62"
tree-sitter = "~0.20.10"
tree-sitter-torvo = { version = "0.0.1", path = "tree-sitter-torvo" }
