[package]
name = "torvo"
description = "Elegant pure functional programming language"
authors = ["Felipe Nascimento <felipenasgomes@gmail.com>"]
version = "0.1.0"
edition = "2021"

[workspace]
members = ["cranelift-shim", "tree-sitter-torvo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
compact-debug = "0.1.0"
cranelift_shim = { path = "cranelift-shim" }
derivative = "2.2.0"
derive-new = "0.6.0"
derive_more = { version = "^1.0.0-beta.6", features = [
    "display",
    "into_iterator",
    "full",
] }
itertools = "0.12.1"
lazy-init = "0.5.1"
target-lexicon = "0.12.13"
thiserror = "1.0.62"
tree-sitter = "~0.20.10"
tree-sitter-torvo = { version = "0.0.1", path = "tree-sitter-torvo" }
